Added required and optional to senotype fields
